--- a/bonus/MedecineSketchFlow/MedecineSF/MedecineSFScreens/Login.xaml
+++ b/bonus/MedecineSketchFlow/MedecineSF/MedecineSFScreens/Login.xaml
@@ -2,7 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" xmlns:local="clr-namespace:TestScreens" x:Name="login"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" xmlns:local="clr-namespace:MedecineSFScreens" x:Name="login"
 	mc:Ignorable="d"
 	x:Class="TestScreens.Écran_1"
 	Width="640" Height="480">
