--- a/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
@@ -3,6 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="1280" Width="720">
     <Grid>
-        
+        <ContentControl x:Name="Menucontrol">
+            
+        </ContentControl>
+        <ContentControl x:Name="contentcontrol">
+            
+        </ContentControl>
     </Grid>
 </Window>
