--- a/colle_tMedecine/colle_tMedecine/View/Menu.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Menu.xaml
@@ -5,13 +5,13 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" x:Name="nav_menu"
 	mc:Ignorable="d"
 	x:Class="colle_tMedecine.View.Menu"
-	Width="200" Height="200">
+	Width="600" Height="200">
 
-	<Grid x:Name="LayoutRoot" Background="White" Margin="0,0,-436,-48">
+	<Grid x:Name="LayoutRoot" Background="White" Margin="0,0,0,10">
 		<StackPanel x:Name="Menu1" Orientation="Horizontal" Margin="8,0" Height="90" VerticalAlignment="Top">
-			<Button x:Name="patient_nav_item" Content="Patients" Height="18" VerticalAlignment="Center" Width="103">
+            <Button Command="{Binding ShowPatientList}" x:Name="patient_nav_item" Content="Patients" Height="40" VerticalAlignment="Center" Width="103" Margin="0,36,0,14">
 			</Button>
-			<Button x:Name="personnel_nav_item" Content="Personnel Medical" Height="18" VerticalAlignment="Center" Width="131" HorizontalAlignment="Center">
+            <Button Command="{Binding ShowUserList}" x:Name="personnel_nav_item" Content="Personnel Medical" Height="40" VerticalAlignment="Center" Width="121" HorizontalAlignment="Center" Margin="0,36,0,14">
 				<Button.Background>
 					<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
 						<GradientStop Color="#FFEEEEEE" Offset="0"/>
