--- a/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
@@ -2,8 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="720" Width="1024">
+
     <Grid>
-        <ContentControl x:Name="Menucontrol">
+        <Grid.Resources>
+            <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+        </Grid.Resources>
+        <ContentControl Visibility="{Binding MenuIsActive, Converter={StaticResource BoolToVisConverter}}" x:Name="Menucontrol">
             <StackPanel x:Name="Menu1" Orientation="Horizontal" Margin="8,0" Height="90" VerticalAlignment="Top">
                 <Button Command="{Binding ShowPatientList}" x:Name="patient_nav_item" Content="Patients" Height="40" VerticalAlignment="Center" Width="103" Margin="0,36,0,14">
                 </Button>
@@ -18,7 +22,7 @@
                 <StackPanel x:Name="Compte"  Margin="177,0,4,13.5" Width="103.5">
                     <TextBlock x:Name="Login_info" Margin="0" TextWrapping="Wrap" Width="96" VerticalAlignment="Center" HorizontalAlignment="Left"><Run Language="fr-fr" Text="Bienvenue Roger"/></TextBlock>
                     <TextBlock x:Name="Role_info" Height="23" Margin="0,0,8,0" TextWrapping="Wrap"><Run Language="fr-fr" Text="Role : Medecin"/></TextBlock>
-                    <Button x:Name="Deconnexion" Content="Deconnexion"  Width="80.5" HorizontalAlignment="Left" Margin="0" Height="20.75">
+                    <Button x:Name="Deconnexion" Command="{Binding LogOut}" Content="Deconnexion"  Width="80.5" HorizontalAlignment="Left" Margin="0" Height="20.75">
                     </Button>
                 </StackPanel>
                 <Image x:Name="Avatar"  Margin="0,0,0,13.5" Width="88.5"/>
