--- a/colle_tMedecine/colle_tMedecine/View/Nouveau_patient.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Nouveau_patient.xaml
@@ -4,18 +4,20 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:colle_tMedecine.View" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" x:Name="nouveau_patient"
 	mc:Ignorable="d"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
 	x:Class="colle_tMedecine.View.Nouveau_patient"
 	Width="640" Height="480">
 
 	<Grid x:Name="LayoutRoot" Background="White">
-		<Button x:Name="Add_button" Content="Ajouter" Height="28.5" Margin="224,0,289,102"  VerticalAlignment="Bottom">
+        <Button x:Name="Add_button" Command="{Binding AddCommand}" Content="Ajouter" Height="28" Margin="254,0,259,128"  VerticalAlignment="Bottom">
 		</Button>
-		<TextBox x:Name="Name_input" Height="22.5" Margin="280,187.5,192.5,0"  TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.203,-0.649"/>
-		<TextBox x:Name="Firstname_input" Height="20.5" Margin="280,210,192.5,0"  TextWrapping="Wrap" VerticalAlignment="Top"/>
-		<DatePicker x:Name="Birthdate" Margin="280,0,192.5,201" VerticalAlignment="Bottom" Height="23"/>
-		<Label Content="Nom" Height="22.5" Margin="157,187.5,0,0"  VerticalAlignment="Top" HorizontalAlignment="Left" Width="101"/>
-		<Label Content="Prenom" Height="20.5" Margin="157,210,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="101"/>
-		<Label Content="Date de naissance" HorizontalAlignment="Left" Height="23" Margin="157,0,0,201" VerticalAlignment="Bottom" Width="101"/>
+        <TextBox x:Name="Name_input" Text="{Binding NameInput}" Height="27" Margin="280,188,192,0"  TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.203,-0.649"/>
+        <TextBox x:Name="Firstname_input" Text="{Binding FirstnameInput}" Height="26" Margin="280,215,192,0"  TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <DatePicker x:Name="Birthdate" SelectedDate="{Binding Path=DateInput}" Margin="280,0,192,201" VerticalAlignment="Bottom" Height="23">
+        </DatePicker>
+        <Label Content="Nom" Height="27" Margin="157,188,0,0"  VerticalAlignment="Top" HorizontalAlignment="Left" Width="101"/>
+		<Label Content="Prenom" Height="26" Margin="157,215,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="101"/>
+		<Label Content="Date de naissance" HorizontalAlignment="Left" Height="23" Margin="157,0,0,201" VerticalAlignment="Bottom" Width="118"/>
 		<TextBlock HorizontalAlignment="Left" Height="33" Margin="8,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontSize="21.333" FontWeight="Bold"><Run Language="fr-fr" Text="Ajouter un patient"/></TextBlock>
 	</Grid>
 </UserControl>
