--- a/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
@@ -9,7 +9,7 @@
 
 	<Grid x:Name="LayoutRoot" Background="White" DataContext="{Binding Patient}">
 		<local:Menu HorizontalAlignment="Left" VerticalAlignment="Top" d:IsPrototypingComposition="True" Height="84"/>
-		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="8,130,0,87" Width="100" ItemsSource="{Binding DataContext.Observations}"
+		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="8,130,0,87" Width="100" ItemsSource="{Binding Obs}"
                  SelectedItem="{Binding DataContext.SelectedObservation,ElementName=Root, Mode=TwoWay}">
         </ListBox>
 		<TextBlock x:Name="Patient_title" HorizontalAlignment="Left" Height="31" Margin="0,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" FontSize="18.667" FontWeight="Bold" TextAlignment="Center">
