--- a/colle_tMedecine/colle_tMedecine/View/patients.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/patients.xaml
@@ -26,8 +26,8 @@
 		<ListBox x:Name="ListPatient" ItemsSource="{Binding ListPatient}" ItemTemplate="{StaticResource listPatient}" Margin="15,150.5,36,82.5" >
 					
 		</ListBox>
-		<TextBox x:Name="Search_bar" Height="27.5" Margin="15,119,0,0" TextWrapping="Wrap" Text="Recherche" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
-		<Button x:Name="search_button" Content="Rechercher" HorizontalAlignment="Left" Height="23.5" Margin="208,119,0,0" VerticalAlignment="Top" Width="99.5"/>
+		<TextBox x:Name="Search_bar"  Text="{Binding Search}" Height="27.5" Margin="15,119,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
+		<Button x:Name="search_button" Command="{Binding SearchPatient}" Content="Rechercher" HorizontalAlignment="Left" Height="23.5" Margin="208,119,0,0" VerticalAlignment="Top" Width="99.5"/>
 		<Button x:Name="new_patient_button" Command="{Binding NewPatient}" Content="Ajouter un patient" HorizontalAlignment="Right" Height="23.5" Margin="0,123,36,0" VerticalAlignment="Top" Width="184.5">
 		</Button>
 		<TextBlock Height="31" Margin="15,84,314,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="21.333" FontWeight="Bold"><Run Language="fr-fr" Text="Gestion des patients"/></TextBlock>
