--- a/colle_tMedecine/colle_tMedecine/App.xaml
+++ b/colle_tMedecine/colle_tMedecine/App.xaml
@@ -3,5 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
          
+    	<Color x:Key="BlueTextColor">#FF035C93</Color>
+    	<Color x:Key="Blue_Button">#FF195077</Color>
+    	<Color x:Key="BlueTitleBg">#FF3A7198</Color>
+         
     </Application.Resources>
 </Application>
