--- a/colle_tMedecine/colle_tMedecine/View/Personnel.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Personnel.xaml
@@ -5,7 +5,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:colle_tMedecine.View" x:Name="personnel"
 	mc:Ignorable="d"
 	x:Class="colle_tMedecine.View.Personnel"
-	Width="640" Height="480">
+	Width="992" Height="580">
     <UserControl.Resources>
         <DataTemplate x:Key="listUser">
             <StackPanel Orientation="Horizontal" Height="28.5" Width="581">
@@ -20,11 +20,28 @@
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
-	<Grid x:Name="LayoutRoot" Background="White">
-        <ListBox x:Name="ListUser" Margin="15,150.5,36,82.5" ItemsSource="{Binding ListUser}" ItemTemplate="{DynamicResource listUser}" />
-		<TextBox x:Name="Search_bar" Text="{Binding Search}"  Height="27.5" Margin="15,119,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
-		<Button x:Name="Search_button" Command="{Binding SearchUser}" Content="Rechercher" HorizontalAlignment="Left" Height="23.5" Margin="208,119,0,0"  VerticalAlignment="Top" Width="99.5"/>
-		<Button x:Name="new_account" Command="{Binding NewUser}" Content="Créer un compte" HorizontalAlignment="Right" Height="23.5" Margin="0,119,36,0"  VerticalAlignment="Top" Width="184.5"/>
-		<TextBlock Height="31" Margin="15,84,314,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="21.333" FontWeight="Bold"><Run Language="fr-fr" Text="Gestion du personnel"/></TextBlock>
+	<Grid x:Name="LayoutRoot">
+		<Rectangle Margin="8,41,8,8" Stroke="Black" RadiusX="20" RadiusY="20">
+			<Rectangle.Fill>
+				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
+			</Rectangle.Fill>
+		</Rectangle>
+        <ListBox x:Name="ListUser" Margin="72.5,150.5,72,82.5" ItemsSource="{Binding ListUser}" ItemTemplate="{DynamicResource listUser}" Height="347" Background="#FFE2ECF5" />
+		<TextBox x:Name="Search_bar" Text="{Binding Search}"  Height="27.5" Margin="72.5,119,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
+		<Button x:Name="Search_button" Command="{Binding SearchUser}" Content="Rechercher" HorizontalAlignment="Left" Height="27.5" Margin="277,119,0,0"  VerticalAlignment="Top" Width="99.5" Foreground="White">
+			<Button.Background>
+				<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
+			</Button.Background>
+		</Button>
+		<Button x:Name="new_account" Command="{Binding NewUser}" Content="Créer un compte" HorizontalAlignment="Right" Height="36.5" Margin="0,110,72,0"  VerticalAlignment="Top" Width="148.5" Foreground="White">
+			<Button.Background>
+				<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
+			</Button.Background>
+		</Button>
+		<TextBlock HorizontalAlignment="Left" Height="33" Margin="9.333,71,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
+				<DropShadowEffect/>
+			</TextBlock.Effect><TextBlock.Background>
+				<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
+			</TextBlock.Background><Run Language="fr-fr" Text="Gestion du personnel médical"/></TextBlock>
 	</Grid>
 </UserControl>
