--- a/colle_tMedecine/colle_tMedecine/View/patients.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/patients.xaml
@@ -1,6 +1,6 @@
 ﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:colle_tMedecine.View" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" x:Name="patients"
 	x:Class="colle_tMedecine.View.Patients"
-	Width="640" Height="480" mc:Ignorable="d">
+	Width="992" Height="580" mc:Ignorable="d">
     <UserControl.Resources>
         <DataTemplate x:Key="listPatient">
             <StackPanel Orientation="Horizontal" Height="28.5" Width="581">
@@ -22,14 +22,31 @@
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
-    <Grid x:Name="LayoutRoot" Background="White">
-		<ListBox x:Name="ListPatient" ItemsSource="{Binding ListPatient}" ItemTemplate="{DynamicResource listPatient}" Margin="15,150.5,36,82.5" >
+    <Grid x:Name="LayoutRoot">
+    	<Rectangle Margin="8,1,8,48" Stroke="Black" RadiusX="20" RadiusY="20">
+			<Rectangle.Fill>
+				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
+			</Rectangle.Fill>
+		</Rectangle>
+		<ListBox x:Name="ListPatient" ItemsSource="{Binding ListPatient}" ItemTemplate="{DynamicResource listPatient}" Margin="72.5,134.5,72,98.5" Background="#FFE2ECF5" >
 					
 		</ListBox>
-		<TextBox x:Name="Search_bar"  Text="{Binding Search}" Height="27.5" Margin="15,119,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
-		<Button x:Name="search_button" Command="{Binding SearchPatient}" Content="Rechercher" HorizontalAlignment="Left" Height="23.5" Margin="208,119,0,0" VerticalAlignment="Top" Width="99.5"/>
-		<Button x:Name="new_patient_button" Command="{Binding NewPatient}" Content="Ajouter un patient" HorizontalAlignment="Right" Height="23.5" Margin="0,123,36,0" VerticalAlignment="Top" Width="184.5">
+		<TextBox x:Name="Search_bar"  Text="{Binding Search}" Height="27.5" Margin="72.5,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="207" FontStyle="Italic"/>
+		<Button x:Name="search_button" Command="{Binding SearchPatient}" Content="Rechercher" HorizontalAlignment="Left" Height="27.5" Margin="290.708,103,0,0" VerticalAlignment="Top" Width="99.5" Foreground="White">
+			<Button.Background>
+				<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
+			</Button.Background>
 		</Button>
-		<TextBlock Height="31" Margin="15,84,314,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="21.333" FontWeight="Bold"><Run Language="fr-fr" Text="Gestion des patients"/></TextBlock>
+		<Button x:Name="new_patient_button" Command="{Binding NewPatient}" Content="Ajouter un patient" HorizontalAlignment="Right" Height="36.5" Margin="0,94,72,0" VerticalAlignment="Top" Width="131.5" Foreground="White">
+			<Button.Background>
+				<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
+			</Button.Background>
+		</Button>
+		<TextBlock HorizontalAlignment="Left" Height="33" Margin="9.333,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
+				<DropShadowEffect/>
+			</TextBlock.Effect><TextBlock.Background>
+				<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
+			</TextBlock.Background><Run Language="fr-fr" Text="Gestion des patients"/></TextBlock>
+
 	</Grid>
 </UserControl>
